--- a/styles/styles.css
+++ b/styles/styles.css
@@ -76,6 +76,11 @@ main section {
     margin-bottom: 3rem;
 }
 
+.landing-filler {
+    height: 5rem;
+    margin-top: -5rem;
+}
+
 #info label {
     display: inline-block;
     width: 3rem;
@@ -84,6 +89,7 @@ main section {
 
 #info input {
     margin: 0 0 2rem 0.5rem;
+    padding: 0 0.5rem;
     border: none;
     height: 2rem;
     width: 50%;
@@ -125,6 +131,7 @@ main section article {
     width: 50%;
     margin-top: 1rem;
     margin-left: 1rem;
+    padding: 0 0.5rem;
 }
 
 #css select {
@@ -163,6 +170,7 @@ footer {
     width: 100%;
     text-align: center;
     font-style: italic;
+    font-size: 0.9rem;
     color: white;
     background-color: var(--main);
 }
